WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244720
WebFullScreenManager should not call forceRepaintWithoutCallback()
https://bugs.webkit.org/show_bug.cgi?id=244720
Summary
WebFullScreenManager should not call forceRepaintWithoutCallback()
Simon Fraser (smfr)
Reported
2022-09-02 11:15:08 PDT
WebFullScreenManager is the only caller of forceRepaintWithoutCallback() outside of test code, and I'd like to fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-09-02 11:18:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3961
EWS
Comment 2
2022-09-03 12:11:01 PDT
Committed
254132@main
(e2e7f87dcce6): <
https://commits.webkit.org/254132@main
> Reviewed commits have been landed. Closing PR #3961 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-09-03 12:12:17 PDT
<
rdar://problem/99529596
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug