WebFullScreenManager should not call forceRepaintWithoutCallback() https://bugs.webkit.org/show_bug.cgi?id=244720

Reviewed by Jer Noble.

WebFullScreenManager is the only place that forceRepaintWithoutCallback() is called outside
of testing code. It's trying to make sure that layers are updated before the fullscreen
animation runs, but we can achieve that more cleanly using m_page.callAfterNextPresentationUpdate()
on the UI-process side.

Tested manually on youtube.com on macOS and iPad.

* Source/WebKit/UIProcess/WebFullScreenManagerProxy.cpp:
(WebKit::WebFullScreenManagerProxy::beganEnterFullScreen):
* Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp:
(WebKit::WebFullScreenManager::willEnterFullScreen):

Canonical link: https://commits.webkit.org/254132@main