Source/WebKit/UIProcess/WebFullScreenManagerProxy.cpp
@@ -183,7 +183,10 @@ void WebFullScreenManagerProxy::exitFullScreen()
 
 void WebFullScreenManagerProxy::beganEnterFullScreen(const IntRect& initialFrame, const IntRect& finalFrame)
 {
-    m_client.beganEnterFullScreen(initialFrame, finalFrame);
+    m_page.callAfterNextPresentationUpdate([weakThis = WeakPtr { *this }, initialFrame = initialFrame, finalFrame = finalFrame](CallbackBase::Error) {
+        if (weakThis)
+            weakThis->m_client.beganEnterFullScreen(initialFrame, finalFrame);
+    });
 }
 
 void WebFullScreenManagerProxy::beganExitFullScreen(const IntRect& initialFrame, const IntRect& finalFrame)
